Fix white page path issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-bio-ml",
-  "homepage": "https://sh3r4zhassan.github.io/tiny-bio-ml",
+  "homepage": "http://www.sherazhassan.com/tiny-bio-ml",
   "private": true,
   "version": "0.0.0",
   "type": "module",
